--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -63,10 +63,14 @@
         }
 
         button:hover {
-            background-color: #555;
+         
+            transform: scale(1.05);
+            transition: 0.3s ease;
         }
+        
+
         form {
-        width: 40%;
+        width: 90%;
         background-color: #e9ecef;
         padding: 20px;
         border-radius: 5px;
@@ -89,7 +93,7 @@
     }
 
     form input, form select {
-        width: 100%;
+        width: 90%;
         padding: 10px;
         margin-bottom: 10px;
         border: 1px solid #ddd;
@@ -182,18 +186,96 @@
 .next{
     margin-right: 3vw;
 }
+
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+.form-left,
+.form-right {
+    width: 48%;
+    background-color: #e9ecef;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+.form-left h3,
+.form-right h3 {
+    margin-top: 0;
+}
+
+.form-left input,
+.form-right input,
+.form-right select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+
+.form-left button,
+.form-right button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background-color: #333;
+    
+    color: #fff;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.form-left button:hover,
+.form-right button:hover {
+    background-color: #014d40;
+}
+
+/* Responsive Design */
+@media screen and (max-width: 768px) {
+    .form-container {
+        flex-direction: column;
+    }
+    .form-left,
+    .form-right {
+        width: 100%;
+    }
+}
+
     </style>
 </head>
 <body>
 
     <div class="container">
         <h2>Add New Order</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Add Order</button>
-        </form>
+        <div class="form-container">
+            <div class="form-left">
+                    <!-- Full Order Form -->
+                <form method="post">
+                    {% csrf_token %}
+                    {{ raw_form.as_p }}
+                    <button type="submit" name="raw_order_submit">Add Order from Text</button>
+                </form>
+
+            </div>
     
+
+            <div method="post" class="form-right">
+
+    <!-- Manual Order Form -->
+    <form method="post">
+        {% csrf_token %}
+        {{ manual_form.as_p }}
+        <button type="submit" name="manual_order_submit">Add Order Manually</button>
+    </form>
+</div>
+</div>
         <h2>Pending Orders</h2>
         <table>
             <tr>
