--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -478,23 +478,18 @@
 <!-- Pagination Links -->
 <div class="Lower_section">
     <div>
-    <span>
-        Page {{ completed_orders.number }} of {{ completed_orders.paginator.num_pages }}
-    </span>
+        <span>
+            Page {{ completed_orders.number }} of {{ completed_orders.paginator.num_pages }}
+        </span>
     </div>
     <div>
-    <span>
         {% if completed_orders.has_previous %}
-            <a class="next" href="?page=1{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">First</a>
-            <a class="next" href="?page={{ completed_orders.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">Previous</a>
+            <a class="next" href="?page={{ completed_orders.previous_page_number }}">Previous</a>
         {% endif %}
-    </span>
-    <span>
+        
         {% if completed_orders.has_next %}
-            <a class="next" href="?page={{ completed_orders.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">Next</a>
-            <a class="next" href="?page={{ completed_orders.paginator.num_pages }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}">Last</a>
+            <a class="next" href="?page={{ completed_orders.next_page_number }}">Next</a>
         {% endif %}
-    </span>
     </div>
 </div>
 </div>
