--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -388,9 +388,20 @@
 <!-- Full Order Form -->
 <form method="post">
     {% csrf_token %}
-    {{ raw_form.as_p }}
+
+    <label for="{{ raw_form.raw_order_input.id_for_label }}">Paste full order</label>
+    {% if raw_form.raw_order_input.errors %}
+    <div style="color: red; background-color: #ffe6e6; padding: 10px; border-radius: 5px; margin-top: 10px; margin-bottom: 10px;">
+        <strong>{{ raw_form.raw_order_input.errors.0 }}</strong>
+    </div>
+{% endif %}
+    {{ raw_form.raw_order_input }}
+
+
+
     <button type="submit" name="raw_order_submit">Add Order from Text</button>
 </form>
+
 
 </div>
 </div>
