--- a/orders/templates/orders/order_list.html
+++ b/orders/templates/orders/order_list.html
@@ -352,7 +352,7 @@
     display: flex;
     justify-content: space-around; 
     gap: 30px; 
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
     padding-top: 4vh;
 }
 
@@ -463,6 +463,9 @@ color: #000;
 .inner-card p {
     font-size: 18px;
     font-weight: bold;
+    white-space: normal;   
+    word-wrap: break-word;  
+    max-width: 150px; 
 }
 
 @keyframes spinBorder {
